# fhir-synth

./: .env.example  .gitignore  404.html  ARCHITECTURE.md  CHANGELOG.md  DEMO.py  LICENSE  Makefile  QUICK_START.md  README.md  index.html  mkdocs.yml  objects.inv  pyproject.toml  sitemap.xml  test_prompts_smoke.py
.github/workflows/: ci.yml  docs.yml  release.yml
api/bundle/: index.html
api/code_generator/: index.html
api/fhir_spec/: index.html
api/fhir_utils/: index.html
api/llm/: index.html
api/pipeline/: index.html
api/rule_engine/: index.html
architecture/: index.html
changelog/: index.html
docs/: architecture.md  changelog.md  index.md
docs/api/: bundle.md  code_generator.md  fhir_spec.md  fhir_utils.md  llm.md  pipeline.md  rule_engine.md
docs/getting-started/: installation.md  quickstart.md
docs/guide/: api.md  cli.md  code-quality.md  llm-framework-analysis.md  mcp.md  metadata-reference.md  metadata.md  pipeline.md  providers.md  skills.md
examples/: create_diverse_subset.py  create_training_prompts.py  meta-acme.yaml  meta-normal.yaml  meta-restricted.yaml  metadata-confidentiality.yaml  metadata-example.yaml  metadata-restricted.yaml  optimize_pipeline.py
getting-started/installation/: index.html
getting-started/quickstart/: index.html
guide/api/: index.html
guide/cli/: index.html
guide/code-quality/: index.html
guide/mcp/: index.html
guide/metadata/: index.html
guide/metadata-reference/: index.html
guide/pipeline/: index.html
guide/providers/: index.html
guide/skills/: index.html
runs/peach_mammoth/: peach_mammoth.py  prompt.txt
runs/vermilion_asp/: vermilion_asp.py
search/: search_index.json
src/fhir_synth/: __init__.py  bundle_builder.py  cli.py  code_generator.py  compiled_programs.py  fhir_spec.py  fhir_utils.py  generator.py  llm.py  naming.py  plan.py  reporter.py  resources.py  rule_engine.py  utils.py  validation.py  validation_report.py  writers.py
src/fhir_synth/bundle/: __init__.py  builder.py  factory.py  manager.py  splitter.py
src/fhir_synth/code_generator/: __init__.py  constants.py  converter.py  dspy_generator.py  executor.py  few_shot_examples.py  fhir_validation.py  generator.py  metrics.py  prompts.py  us_core_validation.py  utils.py
src/fhir_synth/code_generator/executor/: __init__.py  base.py  blaxel.py  dify.py  docker.py  e2b.py  local.py  validation.py
src/fhir_synth/code_generator/prompts/: __init__.py  allergy_immunization.md  careplan_goals.md  comorbidity.md  coverage.md  diagnostic_documents.md  edge_cases.md  encounters.md  hard_rules.md  loader.py  medications.md  patient_variation.md  provenance_quality.md  realism_guidelines.md  reference_map.md  sdoh.md  vital_signs_labs.md
src/fhir_synth/code_generator/prompts/clinical/: 01_patient_variation.md  02_sdoh.md  03_comorbidity.md  04_medication.md  05_vitals_and_labs.md  06_encounters.md  07_allergies_immunizations.md  08_careplan_goals_servicerequest.md  09_diagnostic_documents.md  10_edge_cases.md  11_coverage_insurance.md  12_provenance_data_quality.md  13_empi.md
src/fhir_synth/code_generator/prompts/system/: 01_role.md  02_sandbox.md  03_hard_rules.md  04_realism_guidelines.md  05_reference_map.md  06_creation_order.md  07_think_step_by_step.md  08_terminology_systems.md
src/fhir_synth/code_generator/prompts/templates/: bundle_code_prompt.md  code_prompt.md  empi_prompt.md  fix_prompt.md  rules_prompt.md
src/fhir_synth/data/: __init__.py  bootstrap_few_shot.json  miprov2.json
src/fhir_synth/fhir_utils/: __init__.py  factory.py  lazy_map.py
src/fhir_synth/generators/: __init__.py  clinical.py  documents.py  identity.py  infrastructure.py  medications.py
src/fhir_synth/mcp/: __init__.py  server.py
src/fhir_synth/pipeline/: __init__.py  dspy_modules.py  evaluator.py  models.py  pipeline.py  plan_enricher.py  protocols.py
src/fhir_synth/rule_engine/: __init__.py  empi.py  engine.py  models.py  rules.py
src/fhir_synth/skills/: __init__.py  loader.py  selector.py
src/fhir_synth/skills/builtin/: __init__.py
src/fhir_synth/skills/builtin/allergies-immunizations/: SKILL.md
src/fhir_synth/skills/builtin/care-team/: SKILL.md
src/fhir_synth/skills/builtin/careplan-goals/: SKILL.md
src/fhir_synth/skills/builtin/claims-eob/: SKILL.md
src/fhir_synth/skills/builtin/comorbidity/: SKILL.md
src/fhir_synth/skills/builtin/coverage/: SKILL.md
src/fhir_synth/skills/builtin/diagnostics-documents/: SKILL.md
src/fhir_synth/skills/builtin/edge-cases/: SKILL.md
src/fhir_synth/skills/builtin/encounters/: SKILL.md
src/fhir_synth/skills/builtin/family-history/: SKILL.md
src/fhir_synth/skills/builtin/longitudinal/: SKILL.md
src/fhir_synth/skills/builtin/medications/: SKILL.md
src/fhir_synth/skills/builtin/patient-variation/: SKILL.md
src/fhir_synth/skills/builtin/procedures/: SKILL.md
src/fhir_synth/skills/builtin/provenance-data-quality/: SKILL.md
src/fhir_synth/skills/builtin/sdoh/: SKILL.md
src/fhir_synth/skills/builtin/vitals-and-labs/: SKILL.md
tests/: test_bundle_builder.py  test_bundle_splitter.py  test_code_generator.py  test_dspy_generator.py  test_empi.py  test_executor.py  test_fhir_spec.py  test_fhir_utils.py  test_fhir_validation.py  test_generator.py  test_llm.py  test_mcp_server.py  test_plan.py  test_prompts.py  test_repair_references.py  test_rule_engine.py  test_skills.py  test_us_core_validation.py  test_utils.py
tests/pipeline/: test_e2e.py  test_evaluator.py  test_models.py  test_pipeline.py  test_plan_enricher.py
