[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "fhir-synth"
version = "1.0.0"
description = "Dynamic FHIR R4B synthetic data generator using LLM-powered code generation and declarative rules"
readme = "README.md"
requires-python = ">=3.12"
license = "MIT"
authors = [
    { name = "Alvin Henrick", email = "share.code@aol.com" },
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Healthcare Industry",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Medical Science Apps.",
]
dependencies = [
    "pydantic>=2.0",
    "pyyaml>=6.0",
    "typer[all]>=0.9.0",
    "python-dateutil>=2.8",
    "fhir.resources>=7.0",
    "litellm>=1.0",
    "python-dotenv>=1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "pytest-xdist>=3.0",
    "freezegun>=1.2",
    "ruff>=0.1",
    "mypy>=1.0",
    "types-pyyaml",
    "types-python-dateutil",
]
docs = [
    "mkdocs>=1.6,<2",
    "mkdocs-material>=9.0,<9.6",
    "mkdocstrings[python]>=0.24",
    "pymdown-extensions>=10.0",
]

[project.urls]
Homepage = "https://github.com/alvinhenrick/fhir-synth"
Documentation = "https://alvinhenrick.github.io/fhir-synth/"
Repository = "https://github.com/alvinhenrick/fhir-synth"
Changelog = "https://alvinhenrick.github.io/fhir-synth/changelog/"
Issues = "https://github.com/alvinhenrick/fhir-synth/issues"

[project.scripts]
fhir-synth = "fhir_synth.cli:app"

[tool.hatch.build.targets.wheel]
packages = ["src/fhir_synth"]

[tool.hatch.envs.default]
installer = "uv"
dependencies = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "pytest-xdist>=3.0",
    "freezegun>=1.2",
    "ruff>=0.1",
    "mypy>=1.0",
    "types-pyyaml",
    "types-python-dateutil",
]

[tool.hatch.envs.default.scripts]
test = "pytest {args}"
cov = "pytest --cov=fhir_synth --cov-report=term-missing {args}"
test-fast = "pytest -n auto {args}"
check = ["ruff check src tests", "mypy src"]
format = "ruff format src tests"
lint = "ruff check src tests --fix"

[tool.hatch.envs.docs]
installer = "uv"
dependencies = [
    "mkdocs>=1.6,<2",
    "mkdocs-material>=9.0,<9.6",
    "mkdocstrings[python]>=0.24",
    "pymdown-extensions>=10.0",
]

[tool.hatch.envs.docs.scripts]
build = "mkdocs build --strict"
serve = "mkdocs serve"
deploy = "mkdocs gh-deploy --force"

[tool.hatch.envs.release]
installer = "uv"
dependencies = [
    "python-semantic-release>=9.0",
    "build",
]

[tool.hatch.envs.release.scripts]
version = "semantic-release version"
publish = "semantic-release publish"
build-pkg = "python -m build"

[tool.ruff]
line-length = 100
target-version = "py312"
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
]
ignore = [
    "E501",  # line too long (handled by formatter)
    "B904",  # raise from exception (optional in our case)
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]  # unused imports in __init__
"tests/*" = ["B011"]  # assert False

[tool.mypy]
python_version = "3.12"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
plugins = ["pydantic.mypy"]

[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = false

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "--strict-markers",
    "--strict-config",
    "-ra",
]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "llm: marks tests that require LLM providers",
]

[tool.semantic_release]
version_toml = ["pyproject.toml:project.version"]
version_variables = ["src/fhir_synth/__init__.py:__version__"]
branch = "main"
build_command = "hatch build"
commit_message = "chore(release): {version}"
tag_format = "v{version}"
upload_to_pypi = false
upload_to_vcs_release = true

[tool.semantic_release.changelog]
changelog_file = "CHANGELOG.md"

[tool.semantic_release.remote]
type = "github"


