[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "fhir-synth"
version = "1.10.1"
description = "Dynamic FHIR synthetic data generator using LLM-powered code generation and declarative rules (supports R4B, STU3)"
readme = "README.md"
requires-python = ">=3.12"
license = "MIT"
authors = [
    { name = "Alvin Henrick", email = "share.code@aol.com" },
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Intended Audience :: Healthcare Industry",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Medical Science Apps.",
]
dependencies = [
    "pydantic>=2.0",
    "pyyaml>=6.0",
    "typer[all]>=0.9.0",
    "python-dateutil>=2.8",
    "fhir.resources>=7.0",
    "litellm>=1.82.0",
    "python-dotenv>=1.2.2",
    "faker>=37.0",
    "smolagents>=1.24.0",
]

[project.optional-dependencies]
bedrock = [
    "boto3>=1.28",
]
docker = [
    "smolagents[docker]",
]
e2b = [
    "smolagents[e2b]",
]
blaxel = [
    "smolagents[blaxel]",
]
semantic = [
    "faiss-cpu>=1.7",
    "numpy>=1.24",
    "sentence-transformers>=2.2",
]
docs = [
    "mkdocs>=1.6,<2",
    "mkdocs-material>=9.0,<=9.7.3",
    "mkdocstrings[python]>=0.24",
    "pymdown-extensions>=10.0",
]

[project.urls]
Homepage = "https://github.com/alvinhenrick/fhir-synth"
Documentation = "https://alvinhenrick.github.io/fhir-synth/"
Repository = "https://github.com/alvinhenrick/fhir-synth"
Changelog = "https://alvinhenrick.github.io/fhir-synth/changelog/"
Issues = "https://github.com/alvinhenrick/fhir-synth/issues"

[project.scripts]
fhir-synth = "fhir_synth.cli:app"

[tool.hatch.build.targets.wheel]
packages = ["src/fhir_synth"]

[tool.hatch.envs.default]
installer = "uv"
dependency-groups = ["dev"]
features = ["docker", "e2b", "blaxel"]

[tool.hatch.envs.default.scripts]
test = "pytest {args}"
cov = "pytest --cov=fhir_synth --cov-report=term-missing {args}"
check = ["ruff check src tests", "ruff format --check src tests", "mypy src"]
format = ["ruff check src tests --fix", "ruff format src tests", "ruff check src tests", "mypy src"]

[tool.hatch.envs.docs]
installer = "uv"
features = ["docs"]

[tool.hatch.envs.docs.scripts]
build = "mkdocs build --strict"
serve = "mkdocs serve"
deploy = "mkdocs gh-deploy --force"

[tool.hatch.envs.release]
installer = "uv"
dependencies = [
    "python-semantic-release>=9.0",
    "build",
]

[tool.hatch.envs.release.scripts]
version = "semantic-release version"
publish = "semantic-release publish"
build-pkg = "python -m build"

[tool.ruff]
line-length = 100
target-version = "py312"
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
]
ignore = [
    "E501",  # line too long (handled by formatter)
    "B904",  # raise from exception (optional in our case)
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]  # unused imports in __init__
"tests/*" = ["B011"]  # assert False

[tool.mypy]
python_version = "3.12"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
plugins = ["pydantic.mypy"]

[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = false

[[tool.mypy.overrides]]
module = ["boto3", "boto3.*"]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = ["smolagents", "smolagents.*"]
ignore_missing_imports = true


[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "--strict-markers",
    "--strict-config",
    "-ra",
]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "llm: marks tests that require LLM providers",
]

[tool.semantic_release]
version_toml = ["pyproject.toml:project.version"]
version_variables = ["src/fhir_synth/__init__.py:__version__"]
branch = "main"
build_command = "hatch build"
commit_message = "chore(release): {version}"
tag_format = "v{version}"
upload_to_pypi = false
upload_to_vcs_release = true

[tool.semantic_release.changelog]
changelog_file = "CHANGELOG.md"

[tool.semantic_release.remote]
type = "github"

[dependency-groups]
dev = [
    "freezegun>=1.5.5",
    "mypy>=1.19.1",
    "pytest>=9.0.2",
    "pytest-cov>=7.1.0",
    "pytest-mock>=3.10",
    "pytest-xdist>=3.8.0",
    "ruff>=0.15.7",
    "types-python-dateutil>=2.9.0.20260323",
    "types-pyyaml>=6.0.12.20250915",
]


